js/src/main/TopBar/NotificationsDropdown/NotificationsDropdownItem.css
.notification-item svg {
    display: flex;
}

/* Align dismiss icon with cog icon in header */
.notification-item .dismiss {
    width: 1.75rem;
    flex-shrink: 0;
}

.notification-item {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0.5rem 1.5rem;
}

.notification-item button {
    padding: 0;
}

.notification-item + .dropdown-divider {
    margin: 0
}

.notification-item:hover {
    background: white;
    color: #95a5a6;
}

.notification-item:hover > svg {
    opacity: .7;
}

.notifications-info {
    flex-grow: 1;
    min-width: 0;
    padding-left: 1rem;
    padding-right: 0.5rem;
}

.notifications-info p {
    overflow: hidden;
    text-overflow: ellipsis;
}

.dismiss svg {
    margin: 0 auto;
}

